--- a/info/241203_끊어지지-않도록.md
+++ b/info/241203_끊어지지-않도록.md
@@ -47,7 +47,7 @@
 
 수없이 사람 오고 가고
 
-수없이 언어 변해 가고
+수없이 언어 달라지고
 
 수없이 법과 제도는 변해 왔네
 
@@ -83,7 +83,7 @@
 
 어딘가서 끌어 주고 이어 주오
 
-끊어지지 않도록
+아아 끊어지지 않도록
 
 [chorus]
 
