--- a/info/241229_매듭-SVC-버전.md
+++ b/info/241229_매듭-SVC-버전.md
@@ -4,4 +4,4 @@
 
 보이스는 [여기](https://colab.research.google.com/drive/1el7oNl-gOitYBU5QfakP51sX5CjMgm3H?usp=sharing) 에서 조달
 
-모델이랑 설정 파일 링크는 곧 만들 에정(..)
+모델이랑 설정 파일 링크는 [여기](https://drive.google.com/drive/folders/1w1RvrhPIuz7V-tpTrcP1KITqv-VormSs?usp=drive_link) 입니다. 이거 그대로 자기 드라이브에 복사해서 마운트해서 사용하심 되는 듯
