--- a/info/250207_제망매가-보컬재녹음.md
+++ b/info/250207_제망매가-보컬재녹음.md
@@ -1,4 +1,4 @@
-# 제망매가
+# 제망매가 (보컬 재녹음판)
 
 # 가사
 
@@ -20,4 +20,32 @@
 
 阿也彌陁刹良逢乎吾
 
-道修良待是古如
+阿也道修良待是古如
+
+(간주)
+
+삶과 죽음
+
+그 경계는 두렵고
+
+난 간다고 말도
+
+못 다 하고 가는가
+
+어느 가을 이른 바람에
+
+이리저리 떨어질 잎처럼
+
+같은 가지에 나고
+
+가는 곳 모르는구나
+
+아아 그곳에서 만날 날을
+
+아아 도 닦아 기다리련다
+
+(간주)
+
+아아 (彌陁刹良) 그곳에서 만날 날을 (逢乎吾)
+
+아아 (道修良) 도 닦아 기다리련다 (待是古如)
