--- a/info/250207_제망매가-보컬재녹음.md
+++ b/info/250207_제망매가-보컬재녹음.md
@@ -2,25 +2,25 @@
 
 # 가사
 
-生死路隠
+生死路隠 / 生死로난
 
-此矣有阿米次肹伊遣
+此矣有阿米次肹伊遣 / 예 이샤매 저히고
 
-吾隐去内如辝叱都
+吾隐去内如辝叱都 / 난 가논다 맔도
 
-毛如云遣去内尼叱古
+毛如云遣去内尼叱古 / 몯다 닏고 가나닛고
 
-於內秋察早隠風未
+於內秋察早隠風未 / 어느 가살 이른 바라매
 
-此矣彼矣浮良落尸葉如
+此矣彼矣浮良落尸葉如 / 이애 져애 떠딜 닙다이
 
-一等隠枝良出古
+一等隠枝良出古 / 하단 가재 나고
 
-去奴隠處毛冬乎丁
+去奴隠處毛冬乎丁 / 가논 곳 모다온뎌
 
-阿也彌陁刹良逢乎吾
+阿也 彌陁刹良逢乎吾 / 아야 彌陁刹애 맛보올 나
 
-阿也道修良待是古如
+阿也 道修良待是古如 / 아야 道 닷가 기다리고다
 
 (간주)
 
@@ -40,12 +40,24 @@
 
 가는 곳 모르는구나
 
-아아 그곳에서 만날 날을
+아아 그곳에서 만날 나를
 
-아아 도 닦아 기다리련다
+아아 도 닦으며 기다리련다
 
 (간주)
 
-아아 (彌陁刹良) 그곳에서 만날 날을 (逢乎吾)
+아아 (彌陁刹良 / 彌陁刹애) 
 
-아아 (道修良) 도 닦아 기다리련다 (待是古如)
+그곳에서 만날 나를 (逢乎吾 / 맛보올 나)
+
+아아 (道修良 / 道 닷가)
+
+도 닦으며 기다리련다 (待是古如 / 기다리고다)
+
+아아 (彌陁刹良 / 彌陁刹애) 
+
+그곳에서 만날 나를 (逢乎吾 / 맛보올 나)
+
+아아 (道修良 / 道 닷가)
+
+도 닦으며 기다리련다 (待是古如 / 기다리고다)
