가사 파트 계속 수정해봄..

--- a/info/250207_제망매가-보컬재녹음.md
+++ b/info/250207_제망매가-보컬재녹음.md
@@ -2,6 +2,8 @@
 
 # 가사
 
+**\[Old Korean / 고대 한국어]**
+
 生死路隠 / 生死로난
 
 此矣有阿米次肹伊遣 / 예 이샤매 저히고
@@ -24,6 +26,8 @@
 
 (간주)
 
+**\[Modern Korean / 현대 한국어]**
+
 삶과 죽음
 
 그 경계는 두렵고
@@ -45,6 +49,8 @@
 아아 도 닦으며 기다리련다
 
 (간주)
+
+**[Duet / 함께]**
 
 아아 (彌陁刹良 / 彌陁刹애) 
 
