가사 업데이트 & 보컬에딧만조금

--- a/info/250225_ONLY.md
+++ b/info/250225_ONLY.md
@@ -1,3 +1,81 @@
 # ONLY
 
+제 경험을 조금 과장해서 표현해보았습니다.
+
 # 가사
+
+추억은 있기는 한 걸까
+
+머리엔 끈적한 기억들
+
+떼내고 싶어 몸서릴 쳐도
+
+괴로워질 뿐야
+
+미래는 있기는 한 걸까
+
+내일이 올수록 눈앞은
+
+흐릿해져가 덧칠해져가
+
+그때의 내 모습
+
+그래도 나는 지금보단 나았고
+
+그래도 지금보다는 멍청했지
+
+무채색의 무미건조한 일상이 나는
+
+적당히 좋았어
+
+선율이 없는 세상에서 날 한계지었어
+
+혼자뿐이라며 이것뿐이라며
+
+나의 곁에 처음으로 와줬던 너를
+
+밀어내기만 했었지
+
+네가 내민 손 그 화음에 이제야 더해진
+
+눈물 젖은 내 멜로디
+
+이제 와서야 깨달았어
+
+수십억 개의 선택지 중
+
+오직 그때가
+
+오직 너만이
+
+선명한 이유를
+
+너와 똑같이 생긴 사람이어도
+
+너처럼 따뜻한 목소릴 가져도
+
+그 순간이 아니면 심지어 너라도
+
+완벽하지 않아
+
+무너져 가던 날 되돌리려 너는 말했지
+
+아…기억이 안 나
+
+잊어버렸던 그 한 마디를 잠깐이라도
+
+돌려달라며 외치네
+
+(간주)
+
+나뿐인 거야 그 많은 일에도 난 여전히
+
+내 말 한 마디뿐 내 행동 하나뿐
+
+다른 이에겐 관심조차 하나 없어
+
+너에게도 같았겠지
+
+널 사랑했단 짧은 사실 그 자체를 나는
+
+사랑했었던 것 같아
