--- a/info/250316_연이나.md
+++ b/info/250316_연이나.md
@@ -2,74 +2,114 @@
 
 # 가사
 
-영원히 흘러 빛날 것 같았던
+예로부터 전해진 이야기
 
-한 폭의 빛깔들이 나 그리워져
+노래가 되어 불리던 별자리
 
-여전히 팔을 뻗으면 닿을 것 같이
+시간은 흐르고 이젠 새로운 길을 찾네
 
-그 자리에 있을까
+연이나(그러나) 흐릿한 하늘만이
 
-손 끝을 빼어 허공을 이어
+(전주)
 
-사라져가는 기억들의
+따사로운 여름의 햇살
 
-조각을 짜맞추면 꼭 그때 같아
+기분 좋은 바람
 
-높은 건물에 올라가 볼까
+나뭇잎 사이로 스쳐가는 이 오후의 여유가
 
-빛의 무리를 그곳이라면
+구름 한 점도 없이 투명하게
 
-볼 수 있대서 감았던 눈 떠 보니
+여름 치고 맑은 날씨에
 
-어디까지나 펼쳐진
+이 세상 모든 게 아름답게만 보이네
 
-지평선 끝마저 가득한 별
+들판에서 몇 시간이고
 
-하늘의 비단 뒤집은 듯
+기다리면 밤이 찾아오고
 
-거울처럼 땅 위에 쏟아져 내렸나
+누워있는 나와 굴러가는 하늘 위에
 
-이대로 뻗어 저 높이 닿아라
+반짝이는 별이
 
-이제 또다른 풍경이 눈 앞에
+과거와 현재를 넘어
 
-아무래도 나 이 빛깔 또한 깊이
+우주와 지상 사이를 넘어 호흡하듯
 
-사랑하게 되리라
+나 역시 본받아 오늘부터
 
-(간주)
+부를게 내 이야길
 
-여기라면 별들의 찬란함 노래한
+나 가진 건 네 개의 코드와
 
-이야기 전할 수 있겠지 
+멜로디와 서투른 가삿말 뿐이지만
 
-집에 달려가 서랍을 열고
+누구도 봐 주지 않겠지만
 
-오래 전 기록 꺼내 들었어
-
-마음 속에 깊이 간직했었던
-
-느낌을 담아 생각을 담아
-
-고마움 담아 소망을 담아
-
-기록들을 노래로 만들자
-
-코드 네 개와 멜로디
-
-서투르게 쓰여진 가사로도
-
-전해질 거야 세상에
-
-잊혔던 추억이 낭만이 돌아올 거라고
+연이나(그러나) 모르는 세상으로
 
 (간주)
 
-영원히 흘러 빛날 것 같았던
+필름 돌리듯 소란하게
 
-한 폭의 빛깔들이 그리워지지만
+재생되는 일생
 
-연이나 팔을 뻗으면 닿을 것 같이
+시간의 틈에서 길을 잃고 헤매던 시대
 
-그 자리에 있었어
+도착한 곳엔 차가운 도시와
+
+푸르지 못한 하늘과
+
+밝지만 어두워 기대되지 않는 밤이 와
+
+이런 곳에선
+
+수 년 지나도 즐겁지 못해
+
+먹고살수 있으면 다행
+
+전공은 도움도 안 돼
+
+Okay, Gonna find my way
+
+도시마다 높은 전망대
+
+오르면 경치가 좋대
+
+그 얘기는 결국엔
+
+동경하는 거야 저 별들의
+
+밤새도록 꺼지지 않는 빛을
+
+길거리의 네온사인
+
+낮게 깔린 우주의 거울이라고 하나
+
+나 가진 건 오래된 시계와
+
+이제는 쓰이지 않는 낡은 책 뿐이지만
+
+누구도 알아 주지 않겠지만
+
+연이나(그러나) 차가운 세상으로
+
+여기서 나 전처럼 살 수 없더라도
+
+나 배워왔던 모든 것이 쓸모없어도
+
+과거와 현재를 넘어
+
+우주와 지상 사이를 넘어 호흡하듯
+
+나 역시 본받아 오늘부터
+
+부를게 내 이야길
+
+나 가진 건 네 개의 코드와
+
+멜로디와 서투른 가삿말 뿐이지만
+
+누구도 봐 주지 않겠지만
+
+연이나(그러나) 모르는 세상으로
