--- a/info/250316_연이나.md
+++ b/info/250316_연이나.md
@@ -64,7 +64,7 @@
 
 이런 곳에선
 
-수 년 지나도 즐겁지 못해
+수 년 지나도 안녕 못해
 
 먹고살수 있으면 다행
 
@@ -74,9 +74,9 @@ Okay, Gonna find my way
 
 도시마다 높은 전망대
 
-오르면 경치가 좋대
+야경은 필수 코스래
 
-그 얘기는 결국엔
+V Like a never-ending day
 
 동경하는 거야 저 별들의
 
